--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "eth-keyring-controller",
-  "version": "5.5.0",
-  "description": "A module for managing various keyrings of Ethereum accounts, encrypting them, and using them.",
+  "name": "newchain-keyring-controller",
+  "version": "0.1.0",
+  "description": "A module for managing various keyrings of NewChain accounts, encrypting them, and using them.",
   "main": "index.js",
   "scripts": {
     "test": "mocha --require test/helper.js test/index.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/MetaMask/KeyringController.git"
+    "url": "git+ssh://git@github.com/xiawu/newchain-keyring-controller.git"
   },
   "keywords": [
     "ethereum",
@@ -19,9 +19,9 @@
   "author": "Dan Finlay <dan@danfinlay.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/MetaMask/KeyringController/issues"
+    "url": "https://github.com/xiawu/newchain-keyring-controller/issues"
   },
-  "homepage": "https://github.com/MetaMask/KeyringController#readme",
+  "homepage": "https://github.com/xiawu/newchain-keyring-controller#readme",
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "clone": "^2.1.1",
@@ -43,6 +43,10 @@
     "eth-simple-keyring": "^3.5.0",
     "ethereumjs-util": "^5.1.2",
     "loglevel": "^1.5.0",
+    "newchain-hd-keyring": "^0.1.0",
+    "newchain-sig-util": "^0.1.0",
+    "newchain-simple-keyring": "^0.1.0",
+    "newchainjs-util": "^0.1.2",
     "obs-store": "^4.0.3"
   }
 }
