--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "newchain-keyring-controller",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "A module for managing various keyrings of NewChain accounts, encrypting them, and using them.",
   "main": "index.js",
   "scripts": {
@@ -43,10 +43,10 @@
     "eth-simple-keyring": "^3.5.0",
     "ethereumjs-util": "^5.1.2",
     "loglevel": "^1.5.0",
-    "newchain-hd-keyring": "latest",
-    "newchain-sig-util": "latest",
-    "newchain-simple-keyring": "latest",
-    "newchainjs-util": "latest",
+    "newchain-hd-keyring": "^0.1.3",
+    "newchain-sig-util": "^0.1.2",
+    "newchain-simple-keyring": "^0.1.2",
+    "newchainjs-util": "^0.1.3",
     "obs-store": "^4.0.3"
   }
 }
